# AndroidLearning

./: references.md
App_1/: .gitignore  build.gradle  gradle.properties  settings.gradle  test.gradle
App_1/app/: build.gradle
App_1/app/src/main/: AndroidManifest.xml
App_1/app/src/main/res/layout/: activity_intent_demo.xml  activity_life_cycle.xml  activity_main.xml  activity_start_for_result_demo.xml  activity_transprant.xml
App_1/app/src/main/res/values/: strings.xml
App_1/gradle/wrapper/: gradle-wrapper.properties
App_1/gradledemo/: build.gradle
App_1/gradledemo/src/main/: AndroidManifest.xml
App_1/presentation/: build.gradle
App_1/presentation/src/main/: AndroidManifest.xml
App_1/presentation/src/main/res/anim/: not_exit_push_left_in.xml  push_left_in.xml  push_left_out.xml  push_right_in.xml  (+5 more)
OpenGL/: settings.gradle
OpenGL/app/: build.gradle
OpenGL/app/src/main/: AndroidManifest.xml
OpenGL/basic/: build.gradle
OpenGL/basic/src/main/: AndroidManifest.xml
OpenGL/demos/: build.gradle
OpenGL/demos/src/main/: AndroidManifest.xml
OpenGL/gradle/wrapper/: gradle-wrapper.properties
OpenGL/learnnote/: 1. Hello Triangle  Cmake Develop Guide  opengl note
OpenGL/libmedianative/: CMakeLists.txt  build.gradle
OpenGL/libmedianative/src/main/: AndroidManifest.xml
OpenGL/libmedianative/src/main/assets/: hello_triangle_fragment_shader.glsl  hello_triangle_fragment_shader_green.glsl  learnopengl_shaders_simpleshader_fragment_shader.glsl  learnopengl_shaders_simpleshader_vertex_shader.glsl  learnopengl_shaders_stride_fragment_shader.glsl  learnopengl_shaders_stride_vertex_shader.glsl  learnopengl_shaders_uniform_fragment_shader.glsl  learnopengl_shaders_uniform_fragment_shader1.glsl  learnopengl_shaders_uniform_vertex_shader1.glsl
OpenGL/libmedianative/src/main/cpp/: EGLRender.cpp  EGLRender.h
OpenGL/libmedianative/src/main/cpp/assigns/: AssignFactory.cpp  AssignFactory.h  GLAbsRender.h
OpenGL/libmedianative/src/main/cpp/assigns/triangle/: RenderRect.cpp  RenderRect.h  RenderRectEBO.cpp  RenderRectEBO.h  RenderRectTwoFragmentShader.cpp  RenderRectTwoFragmentShader.h  RenderTriangle.cpp  RenderTriangle.h  RenderTriangleVAO.cpp  RenderTriangleVAO.h  RenderTriangleVBO.cpp  RenderTriangleVBO.h
OpenGL/libmedianative/src/main/cpp/common/: AssetFun.cpp  AssetFun.h  AssignType.h  GLUtils.h  JavaClassPath.h  LogFun.h  MathFun.h  TimeUtil.cpp  TypeUtil.cpp
OpenGL/libmedianative/src/main/cpp/jni/: MediaJNI.cpp  NativeRenderJNI.cpp
OpenGL/libmedianative/src/main/cpp/learnopengl_assigns/: AssignFactory.cpp  AssignFactory.h  AssignFactoryV2.cpp  AssignFactoryV2.h  GLAbsRender.cpp  GLAbsRender.h  GLAbsRenderV2.cpp  GLAbsRenderV2.h
OpenGL/libmedianative/src/main/cpp/learnopengl_assigns/shaders/: SimpleShader.cpp  SimpleShader.h  SimpleShaderV2.cpp  SimpleShaderV2.h
OpenGL/libmedianative/src/main/cpp/learnopengl_assigns/triangle/: RenderRect.h  RenderRectEBO.cpp  RenderRectEBO.h  RenderRectTwoFragmentShader.cpp  RenderRectTwoFragmentShader.h  RenderTriangleVAO.h
OpenGL/libopenglnative/: CMakeLists.txt
OpenGL/libopenglnative/src/main/assets/: hello_triangle_vertex_shader.glsl  learnopengl_shaders_simpleshader_vertex_shader.glsl  learnopengl_shaders_uniform_vertex_shader.glsl  learnopengl_texture_fragment.glsl  learnopengl_texture_horizonal_flip_fragment.glsl  learnopengl_texture_only_one_fragment.glsl  learnopengl_texture_transform_fragment_shader.glsl  learnopengl_texture_vertex.glsl  learnopengl_transform_fragment_shader.glsl  learnopengl_transform_perspactive_fragment_shader.glsl  learnopengl_transform_perspactive_vertex_shader.glsl  learnopengl_transform_vertex_shader.glsl  lighting_basic_color_lightsource_fragment_shader.glsl  lighting_basic_color_lightsource_vertex_shader.glsl  lighting_basic_color_object_fragment_shader.glsl  lighting_basic_color_object_vertex_shader.glsl  lighting_simple_color_object_fragment_shader.glsl  lighting_simple_color_vertex_shader.glsl
OpenGL/libopenglnative/src/main/cpp/common/: AssetFun.cpp  AssetFun.h  AssignType.h  GLUtils.cpp  GLUtils.h  LogFun.h  OptType.h  TimeUtil.h  TypeUtil.h
OpenGL/libopenglnative/src/main/cpp/include/libimage/: stb_image.h
OpenGL/libopenglnative/src/main/cpp/jni/: NativeRenderJNI.cpp
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/: AssignFactory.cpp  AssignFactory.h  GLAbsRender.h
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/lighting/: BasicColorDemo.cpp  BasicColorDemo.h  SimpleColorDemo.cpp  SimpleColorDemo.h
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/shaders/: SimpleShader.cpp  StrideShader.cpp  StrideShader.h  UniformShader.cpp  UniformShader.h
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/textures/: TextureDemo.cpp  TextureDemo.h
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/transform/: PerspactiveTransformDemo.cpp  PerspactiveTransformDemo.h  TextureTransformDemo.cpp  TextureTransformDemo.h  TransformDemo.cpp  TransformDemo.h
OpenGL/libopenglnative/src/main/cpp/learnopengl_assigns/triangle/: RenderRect.cpp  RenderTriangle.cpp  RenderTriangle.h  RenderTriangleVAO.cpp  RenderTriangleVBO.cpp  RenderTriangleVBO.h
OpenGL/libopenglnative/src/main/cpp/objects/: CubeVertices.h
docs/: doc_adb.txt  doc_gradle.txt
views/: settings.gradle
views/app/: build.gradle
views/app/src/main/: AndroidManifest.xml
views/gradle/wrapper/: gradle-wrapper.properties
(+122 files in other folders)
